--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             </div>
                             <div class="overflow">
                                 <div class="section-heading-outer p-l-50 p-r-50">
-                                    <h2 class="section-heading wow">Our team will take your business presence to new level</h2>
+                                    <h2 class="section-heading wow">欢迎来到我的个人网站！</h2>
                                 </div>
                             </div>
                         </div>
@@ -246,12 +246,12 @@
                                     </div>
                                     <div class="overflow">
                                         <div class="title-outer wow">
-                                            <h4 class="title">Branding.</h4>
+                                            <h4 class="title">信息板&nbsp;</h4>
                                         </div>
                                     </div>
                                     <div class="overflow">
                                         <div class="pera-outer wow">
-                                            <p>Ship it user story iterate engaging co-working intuitive pitch deck hacker prototype SpaceTeam user centered design big data.</p>
+                                            <p>点击获取信息&nbsp;</p>
                                         </div>
                                     </div>
                                     <div class="overflow m-t-30">
@@ -375,57 +375,24 @@
                                                 <div class="line"></div>
                                             </div>
 
-                                            <div class="section-title-outer overflow">
-                                                <h3 class="section-title">Strategy.</h3>
-                                            </div>
+                                            <div class="section-title-outer overflow"> </div>
 
                                             <div class="overflow m-b-15">
                                                 <div class="title-outer">
-                                                    <h6 class="title relative">PERFECT STARATEGY FORYOUR BRAND</h6>
+                                                    <h6 class="title relative">按时间顺序排列</h6>
                                                 </div>
                                             </div>
 
                                             <div class="overflow">
-                                                <div class="pera-outer">
-                                                    <p>Chances are unless you are very lucky you will go thru many different relationships before you find your special someone. Finding your sole mate is like gambling. In poker and blackjack you may have to play dozens of hands until you get a winning hand, and it is the same with relationships.</p>
-                                                </div>
+                                              <p>1.NordVPN账号</p>
+                                              <p>&nbsp;</p>
+                                              <p>&nbsp;</p>
                                             </div>
-
-                                            <div class="overflow">
-                                                <div class="pera-outer">
-
-                                                    <p>During your life you will probably meet some people who seem like they may be the one, or that they are closers, and I thought everything was great, until I started to seriously consider getting married.</p>
-                                                </div>
-                                            </div>
-
-                                            <div class="overflow m-t-15">
-                                                <div class="list-outer">
-                                                    <div class="list col-sm-6">
-                                                        <div class="row">
-                                                            <i class="icon icon-icon-ribbon"></i> Award-winning Strategist
-                                                        </div>
-                                                    </div>
-                                                    <div class="list col-sm-6">
-                                                        <div class="row">
-                                                            <i class="icon icon-icon-search-alt"></i> Extended Research
-                                                        </div>
-                                                    </div>
-                                                    <div class="list col-sm-6">
-                                                        <div class="row">
-                                                            <i class="icon icon-icon-document"></i> Bullet-prof Planning
-                                                        </div>
-                                                    </div>
-                                                    <div class="list col-sm-6">
-                                                        <div class="row">
-                                                            <i class="icon icon-icon-like-alt"></i> Trusted by Thousands
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
+<div class="overflow m-t-15"> </div>
 
                                             <div class="overflow">
                                                 <div class="btn-outer m-t-50">
-                                                    <a href="#8" class="btn btn-fill right-icon">GET IN TOUCH <i class="icon icon-arrow-right"></i></a>
+                                                    <a href="#8" class="btn btn-fill right-icon">不知道干什么用的按钮&nbsp;&nbsp; </a>
                                                 </div>
                                             </div>
 
