--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                         <ul class="nav">
                                             <li><a class="btn-mask" href="#">DESIGN</a></li>
                                             <li><a class="btn-mask" href="#">STRATEGY</a></li>
-                                            <li><a class="btn-mask" href="#">BRANDING</a></li>
+                                            <li><a href="/sourcedl.html">下载站</a> </li>
                                         </ul>
                                     </div>
                                 </div>
