--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>     
   
         <!-- TITLE OF SITE --> 
-        <title>FUSION Responsive</title>
+        <title>ZRX的个人网站</title>
   
         <!-- Meta -->
         <meta charset="utf-8">
@@ -149,8 +149,6 @@
                                 <div class="overflow m-t-30">
                                     <div class="list-view">
                                         <ul class="nav">
-                                            <li><a class="btn-mask" href="#">DESIGN</a></li>
-                                            <li><a class="btn-mask" href="#">STRATEGY</a></li>
                                             <li><a href="/sourcedl.html">下载站</a> </li>
                                         </ul>
                                     </div>
@@ -384,17 +382,11 @@
                                             </div>
 
                                             <div class="overflow">
-                                              <p>1.NordVPN账号</p>
+                                              <p>1.下载保险箱应用转至下载站</p>
                                               <p>&nbsp;</p>
                                               <p>&nbsp;</p>
                                             </div>
-<div class="overflow m-t-15"> </div>
-
-                                            <div class="overflow">
-                                                <div class="btn-outer m-t-50">
-                                                    <a href="#8" class="btn btn-fill right-icon">不知道干什么用的按钮&nbsp;&nbsp; </a>
-                                                </div>
-                                            </div>
+<div class="overflow"> </div>
 
                                         </div> <!-- End: .services-content-outer -->
                                     </div> <!-- End: Content Area -->
