--- a/sourcedl.html
+++ b/sourcedl.html
@@ -6,6 +6,7 @@
 </head>
 
 <body>
-	<a href="/sourcedl/source.txt" download="source.txt">点击下载</a>
+	<a href="/sourcedl/source.txt" download="source.txt">点击下载source.txt</a><br>
+	<a href="/sourcedl/locker.exe" download="保险箱.exe">点击下载保险箱应用（Windows10 64bit）</a>
 </body>
 </html>
