--- a/index.html
+++ b/index.html
@@ -22,12 +22,6 @@
         <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
 
-        <!-- GOOGLE FONTS -->
-        <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700,900' rel='stylesheet' type='text/css'>
-        <!-- font-family: 'Merriweather', serif; -->
-        <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-        <!-- font-family: 'Open Sans', sans-serif; -->
-
         <!-- BOOTSTRAP CSS -->
         <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 
@@ -383,8 +377,8 @@
 
                                             <div class="overflow">
                                               <p>1.下载保险箱应用转至下载站</p>
-                                              <p>&nbsp;</p>
-                                              <p>&nbsp;</p>
+                                              <p>2.locker20.5已发布</p>
+                                              <p>&nbsp;3.从下载站下载的source.lksrc密码为123</p>
                                             </div>
 <div class="overflow"> </div>
 
