--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                                             <div class="overflow p-t-40 p-l-40 p-r-40 p-b-40">
                                                 <div class="section-heading-outer">
                                                   <h1 class="heading">ZRX-OneCraft</h1>
-                                                    <p>Personal Website&nbsp;</p>
+                                                  <p><strong>2020/4/16紧急通告：请进入信息板.4.S.I查看。&nbsp;</strong></p>
+<p>&nbsp;</p>
+<p>Personal Website&nbsp;</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -380,7 +382,12 @@
                                               <p>2.locker20.5已发布</p>
                                               <p>&nbsp;3.从下载站下载的source.lksrc密码为123</p>
                                             </div>
-<div class="overflow"> </div>
+<div class="overflow">
+  <p>4.S.I</p>
+  <p>[来自RX-OC]SpecialCode#0x02-BothClose类:非自身行为导致的线上行动受限 目前受情况限制，全局线上行动模式已经转至1档，将主动规避联系行为，如有不方便还请原谅。 该SpecialCode的有效期为一个月，到期后将根据情况进行通知。 面向的对象无需承担任何由该行动引起的责任。 主动规避主要面向网：微信； 其他途径不受主动规避影响。 更多信息请在2020/4/17日之后访问onecraftzrx.github.io获取相关信息（信息发布可能延迟）。 [双密切关联者通知]签发者：￥￥￥（ROOT） 2020/4/16 本地索引码：(R+B)200416.SC0x02； </p>
+  <p>兄弟们， 对不起微信退群了，有事继续在别的地方聊。</p>
+  <p>平台：QQ ，网易云音乐，腾讯会议。</p>
+</div>
 
                                         </div> <!-- End: .services-content-outer -->
                                     </div> <!-- End: Content Area -->
