--- a/sourcedl.html
+++ b/sourcedl.html
@@ -6,7 +6,10 @@
 </head>
 
 <body>
-	<a href="source.txt" download="source.txt">点击下载source.txt</a><br>
-	<a href="locker.exe" download="保险箱.exe">点击下载保险箱应用（Windows10 64bit）</a>
+	<a>独 立 宣 言</a><br>
+	<img src="images/horse.webp" /><br>
+	<a href="record.caesar" download="record.caesar">点击下载record.caesar</a><br>
+	<a href="locker.exe" download="locker.exe">点击下载保险箱应用（Windows10 64bit）</a><br>
+	<a href="vpns.zip" download="vpns.zip">点击下载vpn合集</a><br>
 </body>
 </html>
